// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturePanel renders information for a feature with a description 1`] = `
<StyledPanelBase
  headerText={
    <span>
      Feature
      : 
      <strong>
        FeatureIDE
      </strong>
    </span>
  }
  isLightDismiss={true}
  isOpen={true}
  onDismissed={[Function]}
  onRenderFooterContent={[Function]}
  type={1}
>
  <p>
    A sample description
  </p>
</StyledPanelBase>
`;

exports[`FeaturePanel renders information for a feature without a description 1`] = `
<StyledPanelBase
  headerText={
    <span>
      Feature
      : 
      <strong>
        FeatureHouse
      </strong>
    </span>
  }
  isLightDismiss={true}
  isOpen={true}
  onDismissed={[Function]}
  onRenderFooterContent={[Function]}
  type={1}
>
  <p>
    <em>
      No description set.
    </em>
  </p>
</StyledPanelBase>
`;
